smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/operations/output-before-input.smithy
$version: "2.0"
namespace smithy.example

operation GetFoo {
    output: GetFooOutput
    input: GetFooInput
}

@input
structure GetFooInput {}

@output
structure GetFooOutput {}
